--- a/PluginsInOne.csproj
+++ b/PluginsInOne.csproj
@@ -11,6 +11,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<EmbeddedResource Include=".\Resources\**" />
+	</ItemGroup>
+	<ItemGroup>
 
 		<PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.670" Private="false" ExcludeAssets="runtime;native" />
 		<PackageReference Include="AmongUs.GameLibs.Steam" Version="2023.7.11" PrivateAssets="all" />
